add Requirements to README

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Sayri: Simple ldap administration for Unix resources
+== Sayri: Simple LDAP administration for Unix resources
 
 There are a lot of web ldap administrator such as phpldapamin or apacheldapadmin, but almost everyone are orientated for system administrator. Sayri pretend to simplify the administration of and overall network but orientate to standard user. So you can install it and tell you lazy boss to handle resource as a master administrator.
 
@@ -8,6 +8,14 @@ Sayri is not a LDAP administrator, it just use LDAP as backend for handle Unix r
 == What is Sayri
 
 The idea behind Sayri is to facilitate the administration of resources in a Unix / Linux network. For be more specific it will help you to administrate everything that can be in /etc/nsswitch.conf file. Such as users,groups,host,network, etc.
+
+== Requirements
+
+Sayri should run on most Unix, Linux, Mac, Mac Server and Windows systems as long as Ruby is available on this platform.
+
+=== Ruby interpreter
+
+It should work on ruby 1.9.x and 2.0.0, ruby 1.8.x is not supported
 
 == Getting Started
 
